# mealie-mcp

./: .env.example  .gitignore  .mcp.json  CHANGELOG.md  README.md  pyproject.toml
.claude-plugin/: marketplace.json  plugin.json
agents/: cooking-teacher.md  meal-planner.md  recipe-advisor.md
commands/: find-recipe.md  quick-recipe.md  weekly-menu.md
hooks/: hooks.json
skills/cooking-tips/: SKILL.md
skills/cooking-tips/references/: techniques.md
skills/dietary-management/: SKILL.md
skills/dietary-management/references/: dietary-rules.md  substitutions.md
skills/foundations/: SKILL.md
skills/foundations/references/: foundations-paradigm.md
skills/meal-planning/: SKILL.md
skills/meal-planning/references/: planning-approach.md
skills/recipe-creation/: SKILL.md
skills/recipe-creation/references/: family-guidelines.md  mealie-v3-format.md
src/mealie_mcp/: client.py  config.py  formatting.py  server.py
src/mealie_mcp/tools/: foods.py  mealplan.py  organizers.py  recipes.py  shopping.py
tests/: conftest.py  test_client.py  test_formatting.py  test_recipes.py  test_shopping.py
